--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
                     <a class="git" href="https://github.com/JstnAngrendo" target="_blank"><i class="fa-brands fa-github"></i> github</a>
                 </div>
                 <div class="project-card">
+                    <h1>CozyStudio</h1>
+                    <h2>On Progress Front-End Design</h2>
+                    <div class="lang1">
+                        <h3>html</h3>
+                        <h3>css</h3>
+                        <h3>javascript</h3>
+                    </div>
+                    <a class="git" href="https://github.com/JstnAngrendo/CozyStudio" target="_blank"><i class="fa-brands fa-github"></i> github</a>
+                </div>
+                <div class="project-card">
                     <h1>CC Finder</h1>
                     <h2>On Progress Website Development</h2>
                     <div class="lang1">
@@ -134,7 +144,7 @@
                         <h3>Blade</h3>
                         <h3>Css</h3>
                     </div>
-                    <a class="git" href=" target="_blank"><i class="fa-brands fa-github"></i> github</a>
+                    <a class="git" href=" " target="_blank"><i class="fa-brands fa-github"></i> github</a>
                 </div>
             </div>
         </section>
